--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "chai": "^4.2.0",
+    "chalk": "^4.0.0",
+    "lighthouse": "^5.6.0",
     "mocha": "^7.1.1",
     "puppeteer": "^2.1.1",
     "puppeteer-firefox": "^0.5.1"
