--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "backstopjs": "^5.0.1",
     "chai": "^4.2.0",
     "chalk": "^4.0.0",
     "lighthouse": "^5.6.0",
